# black-hole

./: .gitignore  CMakeLists.txt  README.md
assets/: stars.hdr
include/: camera.hpp
shaders/: frag.gsl  trace.gsl  vert.gsl
src/: camera.cpp  main.cpp
